--- a/Gateway-service/src/main/resources/application.properties
+++ b/Gateway-service/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=Gateway-service
 server.port=8888
 spring.cloud.discovery.enabled=true
 eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka/}
 #to activate all endpoints of spring boot actuator
 management.endpoints.web.exposure.include=*
