--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=account-service
 server.port=8081
-spring.config.import=optional:configserver:http://localhost:9999
+spring.config.import=optional:configserver:${CONFIG_SERVICE_URL:http://localhost:9999}
+eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka/}
 
 #============= config centralisee : app.properties ==============
 #spring.cloud.config.enabled=true
