--- a/config-repo/account-service.properties
+++ b/config-repo/account-service.properties
@@ -1,3 +1,2 @@
-default.params.x=3
-default.params.y=4
-spring.datasource.url=jdbc:h2:mem:customer-db
+spring.datasource.url=jdbc:h2:mem:account-db
+
