--- a/config-repo/application.properties
+++ b/config-repo/application.properties
@@ -1,10 +1,8 @@
-globals.params.x=1
-globals.params.y=2
-
 spring.cloud.config.enabled=true
 spring.cloud.discovery.enabled=true
 spring.h2.console.enabled=true
 eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #to activate all endpoints of spring boot actuator
 management.endpoints.web.exposure.include=*
+spring.h2.console.settings.web-allow-others=true
+
