--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=config-service
 server.port=9999
 #spring.cloud.config.server.git.uri=file:///C:/Users/Oumaima/Documents/microservices-learn/config-repo
 #spring.cloud.config.server.git.default-label=master
-spring.cloud.config.server.git.uri=https://github.com/OumaimaEnnajari/microservice-example.git
-#branche
-spring.cloud.config.server.git.default-label=config-repo  
+spring.cloud.config.server.git.uri=https://github.com/OumaimaEnnajari/microservice-bank-config.git
+management.endpoints.web.exposure.include=*
+eureka.instance.prefer-ip-address=true
