--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=customer-service
 server.port=8080
-spring.config.import=optional:configserver:http://localhost:9999
+spring.config.import=optional:configserver:${CONFIG_SERVICE_URL:http://localhost:9999}
+eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka/}
 
 #========== config specialise : customer-service.properties
 #spring.datasource.url=jdbc:h2:mem:customer-db
